istio/simple-apm-igor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-apm
spec:
  selector:
    app: simple-apm
  ports:
  - port: 3000
    targetPort: 3000
