istio/simple-apm-igor/vs-simple-apm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-simple-apm
spec:
  hosts:
  - "*"
  gateways:
  - rancher-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: simple-apm
        port:
          number: 3000
